--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,38 +5,77 @@
 .site-header {
 	position: relative;
 	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 3rem;
+}
 
-	.site-title {
+.site-title {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 1rem;
+
+	color: $primary;
+	text-transform: uppercase;
+	font-size: 2.2rem;
+	font-weight: 700;
+	@include leading(2.2, true);
+
+	& a {
 		display: inline-block;
-		color: $primary;
-		text-transform: uppercase;
-		font-size: 2.2rem;
-		@include leading(2.2, true);
+		text-decoration: none;
+		padding: 0 0.5rem;
+		margin: 0 -0.5rem;
+		border-radius: 0.2rem;
+		background: transparent;
+		@include transition(all);
 
-		& a {
+		&:hover {
+			color: white;
+			background: $primary;
+		}
+	}
+
+	// Shorten the title on smaller screens
+	@media all and (max-width: $md-breakpoint) {
+		& a:before {
+			content: "BR";
 			display: inline-block;
-			text-decoration: none;
-			padding: 0 0.5rem;
-			margin: 0 -0.5rem;
-			border-radius: 0.2rem;
-			background: transparent;
-			transition: all 200ms ease-in;
-
-			&:hover {
-				background: $secondary;
-			}
 		}
 
-		// Shorten the title on smaller screens
-		@media all and (max-width: $md-breakpoint) {
-			& a:before {
-				content: "BR";
-				display: inline-block;
-			}
-
-			.title-text {
-				@include screenreader-only;
-			}
+		.title-text {
+			@include screenreader-only;
 		}
+	}
+}
+
+.site-navigation {
+	display: inline-block;
+	vertical-align: middle;
+	text-align: right;
+
+	ul {
+		margin: 0;
+	}
+
+	li {
+		list-style: none;
+		display: inline-block;
+		vertical-align: middle;
+
+		&:after {
+			content: "/";
+			color: lighten($secondary, 30%);
+			padding: 0 0.8rem;
+		}
+
+		&:last-child:after {
+			display: none;
+		}
+	}
+
+	a:hover, .active {
+		color: $primary;
 	}
 }
