--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -9,3 +9,21 @@
 	border: 0;
 	outline: 0;
 }
+
+@mixin transition($properties, $duration: $default-transition-duration) {
+	transition-property: $properties;
+	transition-duration: $duration;
+	transition-timing-function: cubic-bezier(0.470, 0.000, 0.745, 0.715); /* easeInSine */
+}
+
+/* 
+ * Calculate leading based upon multiplier
+ */
+@mixin leading($multiplier: 1, $hug: false) {
+    line-height: $multiplier * $leading;
+    @if $hug == false { 
+        margin-top: $multiplier * $leading; 
+    } @else {
+        margin-top: 0;
+    }
+}
