--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,15 +9,17 @@ $baseLineHeight: 1.5; // how large the line height is as a multiple of font size
 $leading: $baseLineHeight * 1rem;
 // Rate of growth for headings
 // I actually like this to be slightly smaller then the leading. Makes for tight headings.
-$scale: 1.2;
+$scale: 1.3;
 
 
-$container-width: 950px;
+$container-width: 850px;
+
+$default-transition-duration: 200ms;
 
 
 // Colors
 $primary: #d9534f;
-$secondary: #50514f;
+$secondary: #5a5a5a;
 
 // Breakpoints
 $sm-breakpoint: 450px;
