Home page text and styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <h1 class="site-title">
-    <a href="/">
+    <a href="/" title="Go home - {{ site.title }}">
       <span class="title-text">{{ site.title }}</span>
     </a>
   </h1>
