--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,9 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
+/*! {{ site.url }} | how are you doing today stranger? */
+
 @charset "utf-8";
 
 @import 'variables';
@@ -11,7 +14,6 @@
 // Base styles and resets
 @import 'typebase';
 @import 'base';
-
 
 // Components
 @import 'header';
