Portfolio page data complete

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -9,3 +9,7 @@
 @include link("mailto", #febe12);
 
 @include link("taylor.edu", #5A3358);
+
+@include link("github.com", #4183c4);
+
+@include link("reddit.com", #ff4500);
