--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
 // Open all external links in a new tab
 for(var c = document.getElementsByTagName("a"), a = 0;a < c.length;a++) {
 	var b = c[a];
-	b.getAttribute("href") && b.hostname !== location.hostname && (b.target = "_blank") && (b.rel = "noopener noreferrer");
+	b.getAttribute("href") && (b.hostname !== location.hostname) && (b.target = "_blank") && (b.rel = "noopener noreferrer");
  }
  </script>
