--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -14,7 +14,7 @@
 <link rel="icon" type="image/png" href="/assets/icon/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/assets/icon/manifest.json">
 <link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#d9534f">
-<link rel="shortcut icon" href="/assets/icon/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/assets/icon/mstile-144x144.png">
 <meta name="msapplication-config" content="/assets/icon/browserconfig.xml">
