--- a/_sass/_typebase.scss
+++ b/_sass/_typebase.scss
@@ -9,11 +9,7 @@ html {
     font-size: $baseFontSize / 16 * 100%;
     // Make everything look a little nicer in webkit
     -webkit-font-smoothing: antialiased;
-    // -webkit-text-size-adjust: auto
-    // -moz-text-size-adjust: auto
-    // -ms-text-size-adjust: auto
-    // -o-text-size-adjust: auto
-    // text-size-adjust: auto
+    text-size-adjust: 100%;
 
 }
 /* Copy & Lists */
@@ -22,6 +18,7 @@ p {
     line-height: $leading;
     margin-top: $leading;
     margin-bottom: 0;
+    font-size: 1rem;
 }
 ul,
 ol {
