--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,6 +37,12 @@ a {
 	color: white;
 }
 
+.img-responsive {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
 code {
 	display: inline-block;
 	vertical-align: baseline;
