--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,21 +1,21 @@
-<link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="/assets/icon/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/assets/icon/favicon-194x194.png" sizes="194x194">
-<link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="/assets/icon/android-chrome-192x192.png" sizes="192x192">
-<link rel="icon" type="image/png" href="/assets/icon/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/assets/icon/manifest.json">
-<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#d9534f">
+<link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-touch-icon-57x57.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-touch-icon-60x60.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-touch-icon-72x72.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-touch-icon-76x76.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-touch-icon-114x114.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-touch-icon-120x120.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-touch-icon-144x144.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-touch-icon-152x152.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon-180x180.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="icon" type="image/png" href="/assets/icon/favicon-32x32.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" sizes="32x32">
+<link rel="icon" type="image/png" href="/assets/icon/favicon-194x194.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" sizes="194x194">
+<link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" sizes="96x96">
+<link rel="icon" type="image/png" href="/assets/icon/android-chrome-192x192.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" sizes="192x192">
+<link rel="icon" type="image/png" href="/assets/icon/favicon-16x16.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" sizes="16x16">
+<link rel="manifest" href="/assets/icon/manifest.json?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg?{{ site.time | date: '%Y%m%d%U%H%N%S' }}" color="#d9534f">
 <link rel="shortcut icon" href="/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/assets/icon/mstile-144x144.png">
-<meta name="msapplication-config" content="/assets/icon/browserconfig.xml">
+<meta name="msapplication-TileImage" content="/assets/icon/mstile-144x144.png?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
+<meta name="msapplication-config" content="/assets/icon/browserconfig.xml?{{ site.time | date: '%Y%m%d%U%H%N%S' }}">
 <meta name="theme-color" content="#d9534f">
