Added special warning message for inclusion in webcaches

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<a href="mailto:{{ site.email }}" class="cache-warning">Site down? Please send an email to {{ site.email }}</a>
 <header class="site-header">
   <h1 class="site-title">
     <a href="/" title="Go home - {{ site.title }}">
