--- a/css/main.scss
+++ b/css/main.scss
@@ -21,3 +21,6 @@
 @import "links";
 @import "home";
 @import "portfolio";
+
+// Special banner for when this site is displayed from a cache like Google cache
+@import "cache_warning";
