Use greedy adjacent selector

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -40,7 +40,7 @@
 
 @mixin cache-warning($selector, $custom: false) {
     @if $custom == false {
-        #{$selector} + div .cache-warning { display: block; }
+        #{$selector} ~ div .cache-warning { display: block; }
     } @else {
         #{$selector} { display: block; }
     }
