--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,6 +21,9 @@ $default-transition-duration: 200ms;
 $primary: #d9534f;
 $secondary: #5a5a5a;
 
+$background-dark: #222;
+$secondary-dark: #fcfcfc;
+
 // Breakpoints
 $sm-breakpoint: 450px;
 $md-breakpoint: 600px;
