--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -71,6 +71,14 @@
 		&:hover {
 			color: lighten($color, 20%);
 		}
+
+        @media (prefers-color-scheme: dark) {
+            color: lighten($color, 18%);
+
+            &:hover {
+                color: lighten($color, 30%);
+            }
+        }
 	}
 }
 
